
[project]
name = "signal"
version = "0.1.0"
description = "Signal brodacasting library"
authors = [
    {name = "Marc", email = "cram@hotmail.fr"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.269",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "coverage>=7.2.5",
    "assertpy>=1.1",
]
